# gst-plugin-cedar

./: .gitignore  AUTHORS  ChangeLog  README  configure.ac
src/: Makefile.am  gstcedarh264enc.c  gstcedarh264enc.h
